fix: correct missing margin-left on page-title

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -334,6 +334,7 @@ a {
     border-top-width: 0;
     color: #80C24A;
     margin-top: 0;
+    margin-left: 20px;
     translate: 0 0dvw;
     user-select: none;
     width: fit-content;
